[project]
name = "plex-tbx"
version = "0.1.1"
description = "Small CLI interface full of python tools to help with Plex management and maintenance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pip>=26.0.1",
    "rich==14.3.3",
    "typer==0.24.1",
]

[project.scripts]
plex-tbx = "plex_toolbox.cli.app:app"
